<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="end" android:id="@+id/setting" android:focusable="false" android:clickable="true" android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView android:id="@+id/container" android:layout_width="wrap_content" android:layout_height="match_parent" android:fillViewport="true">
        <LinearLayout android:orientation="vertical" android:id="@+id/content" android:background="#e00c1905" android:paddingLeft="10dp" android:paddingTop="20dp" android:paddingRight="10dp" android:layout_width="350dp" android:layout_height="wrap_content">
            <TextView android:textSize="16sp" android:id="@+id/name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_URL"/>
            <TextView android:textSize="14sp" android:id="@+id/version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text=""/>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="20dp">
                <ProgressBar android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
                <TextView android:textSize="14sp" android:id="@+id/version_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text=""/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <Button android:textSize="14sp" android:id="@+id/confirm_config" android:layout_width="100dp" android:layout_height="45dp" android:text="@string/channels" android:layout_marginEnd="5dp"/>
                <EditText android:textSize="14sp" android:id="@+id/config" android:scrollbars="vertical" android:layout_width="245dp" android:layout_height="wrap_content" android:hint="@string/channels" android:inputType="textMultiLine"/>
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content">
                <Button android:textSize="14sp" android:id="@+id/confirm_channel" android:layout_width="225dp" android:layout_height="match_parent" android:text="@string/channel" android:layout_marginEnd="5dp"/>
                <EditText android:textSize="14sp" android:id="@+id/channel" android:scrollbars="vertical" android:layout_width="225dp" android:layout_height="match_parent" android:hint="@string/channel" android:inputType="textMultiLine"/>
            </LinearLayout>
            <Button android:textSize="14sp" android:id="@+id/exit" android:layout_width="150dp" android:layout_height="45dp" android:layout_marginTop="0dp" android:text="@string/exit"/>
            <Switch android:textSize="14sp" android:id="@+id/switch_channel_reversal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/title_channel_reversal"/>
            <Switch android:textSize="14sp" android:id="@+id/switch_channel_num" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/title_channel_num"/>
            <Switch android:textSize="14sp" android:id="@+id/switch_time" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/title_time"/>
            <Switch android:textSize="14sp" android:id="@+id/switch_boot_startup" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dp" android:text="@string/title_boot_startup"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
